<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_recipe_steps_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_value_medium"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    tools:context=".ui.activity.RecipeDetailActivity"
    tools:listitem="@layout/item_recipe_step" />