<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.baking.ui.activity.RecipesFragment">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srf_container_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_recipe" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>